--- a/app/src/main/res/layout/activity_wisconsin_river.xml
+++ b/app/src/main/res/layout/activity_wisconsin_river.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.wiscotrail.WisconsinRiver">
+    tools:context="edu.wisc.ece.wiscotrail.WisconsinRiver"
+    android:background="@drawable/wisconsin_river">
 
     <TextView
         android:text="You have reached the Wisconsin River!"
@@ -21,22 +22,22 @@
         android:textAlignment="center" />
 
     <Button
-        android:text="Pay $200 to ride the ferry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView19"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
-        android:id="@+id/payToCrossBtn2"
-        android:onClick="payAndTakeFerry"/>
-
-    <Button
         android:text="Attempt to ford the river on your own"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/payToCrossBtn2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
         android:id="@+id/goToRiverCrossingBtn2"
-        android:onClick="goToRiverCrossing"/>
+        android:onClick="goToRiverCrossing"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="110dp" />
+
+    <Button
+        android:text="Pay $200 to ride the ferry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/payToCrossBtn2"
+        android:onClick="payAndTakeFerry"
+        android:layout_above="@+id/goToRiverCrossingBtn2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp" />
 </RelativeLayout>
