--- a/app/src/main/res/layout/activity_devils_lake_view1.xml
+++ b/app/src/main/res/layout/activity_devils_lake_view1.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_sheboygan"
+    android:id="@+id/activity_devils_lake_view1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.wiscotrail.Sheboygan"
-    android:background="@drawable/sheboygan">
+    tools:context="edu.wisc.ece.wiscotrail.DevilsLakeView1"
+    android:background="@color/black">
 
     <Button
-        android:text="Go to the Farm and Fleet"
+        android:text="Yeah, pretty cool."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="141dp"
-        android:id="@+id/button30"
-        android:onClick="goFarmNFleet" />
-
-    <Button
-        android:text="Continue On!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="53dp"
-        android:id="@+id/button31"
-        android:onClick="backToDash"
-        android:layout_alignTop="@+id/button30"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="55dp"
+        android:id="@+id/button34" />
 
     <TextView
-        android:text="You've reached Sheboygan!"
+        android:text="It's pretty cool, isn't it?"
+        android:textColor="@color/almost_white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView27"
-        android:textSize="28sp"
-        android:background="@color/almost_white"/>
+        android:layout_marginTop="52dp"
+        android:id="@+id/textView28"
+        android:textSize="28sp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/devils_lake3"
+        android:id="@+id/imageView2"
+        android:layout_alignTop="@+id/textView28"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
