--- a/app/src/main/res/layout/activity_madison.xml
+++ b/app/src/main/res/layout/activity_madison.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.wiscotrail.Madison">
+    tools:context="edu.wisc.ece.wiscotrail.Madison"
+    android:background="@drawable/madison">
 
     <Button
         android:text="Go to the Farm and Fleet"
@@ -37,5 +38,6 @@
         android:id="@+id/textView17"
         android:textSize="28sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@color/almost_white"/>
 </RelativeLayout>
