--- a/app/src/main/res/layout/activity_minneapolis.xml
+++ b/app/src/main/res/layout/activity_minneapolis.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.wiscotrail.Minneapolis">
+    tools:context="edu.wisc.ece.wiscotrail.Minneapolis"
+    android:background="@drawable/minneapolis">
 
     <TextView
         android:text="You've reached Minneapolis!"
@@ -19,7 +20,8 @@
         android:textAlignment="center"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@color/almost_white"/>
 
     <Button
         android:text="Go to the Farm and Fleet"
