--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -5,17 +5,34 @@
     android:id="@+id/activity_main_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#03832d"
     tools:context="edu.wisc.ece.wiscotrail.MainScreen">
+
+    <ImageView
+        android:layout_width="0dp"
+        android:background="@drawable/sunny"
+        android:id="@+id/weatherImage"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/viewSuppliesBtn"
+        android:cropToPadding="false"
+        app:srcCompat="@drawable/gradient"
+        android:scaleType="centerCrop"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:text="Weather:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView34"
-        app:layout_constraintBottom_toTopOf="@+id/textView33"
+        android:textColor="@color/almost_white"
+        app:layout_constraintLeft_toLeftOf="@+id/weatherImage"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView33"
         android:layout_marginBottom="4dp" />
 
     <TextView
@@ -23,9 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView36"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
+        android:textColor="@color/almost_white"
+        app:layout_constraintLeft_toLeftOf="@+id/weatherImage"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textView38"
         android:layout_marginBottom="4dp" />
 
@@ -38,17 +56,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textView35"
-        android:layout_marginBottom="4dp" />
+        android:layout_marginBottom="4dp"
+        android:textColor="@color/almost_white" />
 
     <TextView
         android:text="Pace:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView38"
-        app:layout_constraintBottom_toTopOf="@+id/textView34"
+        android:textColor="@color/almost_white"
+        app:layout_constraintLeft_toLeftOf="@+id/weatherImage"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView34"
         android:layout_marginBottom="4dp" />
 
     <TextView
@@ -60,7 +80,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textView40"
-        android:layout_marginBottom="4dp" />
+        android:layout_marginBottom="4dp"
+        android:textColor="@color/almost_white" />
 
     <TextView
         android:text="Money:"
@@ -71,7 +92,8 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="16dp"
+        android:textColor="@color/almost_white"/>
 
     <Button
         android:text="Trade"
@@ -102,7 +124,8 @@
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="16dp"
-        android:layout_marginBottom="4dp" />
+        android:layout_marginBottom="4dp"
+        android:textColor="@color/almost_white" />
 
 
     <TextView
@@ -110,6 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/date_field"
+        android:textColor="@color/almost_white"
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toRightOf="@+id/textView40"
         android:layout_marginLeft="24dp"
@@ -125,7 +149,8 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toRightOf="@+id/textView40"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="24dp"
+        android:textColor="@color/almost_white" />
 
     <TextView
         android:text="TextView"
@@ -136,7 +161,8 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toRightOf="@+id/textView40"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="24dp"
+        android:textColor="@color/almost_white" />
 
     <TextView
         android:text="TextView"
@@ -147,7 +173,8 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toRightOf="@+id/textView40"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="24dp"
+        android:textColor="@color/almost_white" />
 
     <TextView
         android:text="TextView"
@@ -158,7 +185,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         app:layout_constraintBottom_toTopOf="@+id/viewSuppliesBtn"
-        android:layout_marginBottom="4dp" />
+        android:layout_marginBottom="4dp"
+        android:textColor="@color/almost_white" />
 
     <Button
         android:text="Change Travel Settings"
@@ -235,7 +263,8 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toRightOf="@+id/textView40"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="24dp"
+        android:textColor="@color/almost_white" />
 
     <TextView
         android:text="TextView"
@@ -246,7 +275,8 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="24dp"
         app:layout_constraintLeft_toRightOf="@+id/textView40"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="24dp"
+        android:textColor="@color/almost_white" />
 
     <Button
         android:text="Health"
@@ -266,13 +296,7 @@
         tools:layout_editor_absoluteY="20dp"
         tools:layout_editor_absoluteX="0dp" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="177dp"
-        app:srcCompat="@drawable/sunny"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp"
-        android:id="@+id/weatherImage" />
+
 
 
 </android.support.constraint.ConstraintLayout>
