--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toTopOf="@+id/viewSuppliesBtn"
         android:cropToPadding="false"
         app:srcCompat="@drawable/gradient"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintVertical_bias="0.0" />
 
