--- a/app/src/main/res/layout/activity_travel_animation.xml
+++ b/app/src/main/res/layout/activity_travel_animation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_travel_animation"
     android:layout_width="match_parent"
@@ -8,14 +9,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.wiscotrail.TravelAnimation">
+    tools:context="edu.wisc.ece.wiscotrail.TravelAnimation"
+    android:background="@drawable/travel">
 
     <TextView
-        android:text="TextView"
+        android:text="Touch Screen to Continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="206dp"
-        android:id="@+id/textView65" />
+        android:id="@+id/textView65"
+        android:textSize="20sp"
+        android:layout_marginBottom="13dp"
+        android:textColor="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
