added picz and revamped river crossing

--- a/app/src/main/res/layout/activity_river_crossing.xml
+++ b/app/src/main/res/layout/activity_river_crossing.xml
@@ -13,15 +13,6 @@
     tools:context="edu.wisc.ece.wiscotrail.RiverCrossing">
 
 
-    <ImageView
-        app:srcCompat="@drawable/wagon"
-        android:id="@+id/wagon_img"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp" />
-
     <TextView
         android:text="Tilt to avoid tipping!"
         android:layout_width="wrap_content"
@@ -32,5 +23,14 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="65dp" />
+
+    <ImageView
+        app:srcCompat="@drawable/wagonbutt"
+        android:id="@+id/wagon_img"
+        android:layout_marginBottom="35dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
