--- a/app/src/main/res/layout/activity_end_points.xml
+++ b/app/src/main/res/layout/activity_end_points.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_end_game"
+    android:id="@+id/activity_end_points"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.wisc.ece.wiscotrail.EndGame">
+    tools:context="edu.wisc.ece.wiscotrail.EndPoints"
+    android:background="@drawable/lambeau">
 
     <TextView
-        android:text=":( \nYou are dead."
+        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="201dp"
-        android:id="@+id/textView30"
+        android:layout_marginTop="43dp"
+        android:id="@+id/PointsTextView"
         android:textSize="28sp"
-        android:textAlignment="center" />
+        android:textColor="@color/black"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="Button"
+        android:text="Go to Start Screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="103dp"
-        android:id="@+id/button23"
-        android:onClick="quit"/>
+        android:layout_marginBottom="76dp"
+        android:id="@+id/button36"
+        android:onClick="goToStart"/>
 </RelativeLayout>
