--- a/app/src/main/res/layout/activity_minneapolis.xml
+++ b/app/src/main/res/layout/activity_minneapolis.xml
@@ -11,18 +11,6 @@
     tools:context="edu.wisc.ece.wiscotrail.Minneapolis"
     android:background="@drawable/minneapolis">
 
-    <TextView
-        android:text="You've reached Minneapolis!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView23"
-        android:textSize="28sp"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/almost_white"/>
-
     <Button
         android:text="Go to the Farm and Fleet"
         android:layout_width="wrap_content"
@@ -42,4 +30,16 @@
         android:layout_marginTop="52dp"
         android:id="@+id/button17"
         android:onClick="backToDash"/>
+
+    <TextView
+        android:text="You've reached\nMinneapolis!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView23"
+        android:textSize="28sp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="9dp" />
 </RelativeLayout>
