--- a/app/src/main/res/layout/activity_new_glarus.xml
+++ b/app/src/main/res/layout/activity_new_glarus.xml
@@ -41,7 +41,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@color/almost_white"/>
+        android:textColor="@color/black"/>
 
     <Button
         android:text="Drink a spotted cow"
