--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -22,7 +22,7 @@
         android:textAlignment="center" />
 
     <Button
-        android:text="Button"
+        android:text="Darn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
