Now the game ends properly

--- a/app/src/main/res/layout/activity_devils_lake.xml
+++ b/app/src/main/res/layout/activity_devils_lake.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textColor="@color/black"
-        />
+        android:textAlignment="center" />
 
     <Button
         android:text="Continue on!"
