--- a/app/src/main/res/layout/activity_devils_lake_view1.xml
+++ b/app/src/main/res/layout/activity_devils_lake_view1.xml
@@ -12,15 +12,6 @@
     tools:context="edu.wisc.ece.wiscotrail.DevilsLakeView1"
     android:background="@color/black">
 
-    <Button
-        android:text="Yeah, pretty cool."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="55dp"
-        android:id="@+id/button34" />
-
     <TextView
         android:text="It's pretty cool, isn't it?"
         android:textColor="@color/almost_white"
@@ -40,4 +31,14 @@
         android:layout_alignTop="@+id/textView28"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Yeah, pretty cool."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button34"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:onClick="goTo2"/>
 </RelativeLayout>
