--- a/app/src/main/res/layout/activity_devils_lake_view2.xml
+++ b/app/src/main/res/layout/activity_devils_lake_view2.xml
@@ -12,15 +12,6 @@
     tools:context="edu.wisc.ece.wiscotrail.DevilsLakeView2"
     android:background="@color/black">
 
-    <Button
-        android:text="I'm tired of Devil's Lake now."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:id="@+id/button35"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
     <TextView
         android:text="Even cooler over here, right?"
         android:layout_width="wrap_content"
@@ -32,11 +23,21 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:text="I'm tired of Devil's Lake now."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button35"
+        android:onClick="continueTrail"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/devils_lake2"
         android:id="@+id/imageView3"
-        android:layout_alignBottom="@+id/button35"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
