--- a/app/src/main/res/layout/activity_minneapolis.xml
+++ b/app/src/main/res/layout/activity_minneapolis.xml
@@ -32,7 +32,7 @@
         android:onClick="backToDash"/>
 
     <TextView
-        android:text="You've reached\nMinneapolis!"
+        android:text="You are in\nMinneapolis!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView23"
